dataset1235/2025-2/1153765216/users/3635356750/executions/2747719322_1927446959.log
== SUBMISSION (2025-08-24 01:44:21)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2))

resultado_2 = n+ (n * (42/100))
print(round(resultado_2, 2))

resultado_3 = n - (n * (27/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
89.89
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
18.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
237.69
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2604.57
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
3961.13
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
8.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:17:11)
-- CODE: 
n = float(input())
porcentagem_27 = n * 0.27
acrescimo_42 = n * 1.42
desconto_63 = n * 0.37
print(f"{porcentagem_27:.2f}")
print(f"{acrescimo_42:.2f}")
print(f"{desconto_63:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:36:44)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roud(porcentagem_27, 2)
acrescimo_42 = n * (142/100)
resutado_2 = round(acrescimo_42, 2)
desconto_63 = n * ()

print(resutado_1)
print(resutado_2)
print(f"{desconto_63:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:37:03)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roud(porcentagem_27, 2)
acrescimo_42 = n * (142/100)
resutado_2 = round(acrescimo_42, 2)


print(resutado_1)
print(resutado_2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:38:39)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roundd(porcentagem_27, 2)
acrescimo_42 = n + (42/100)
resutado_2 = round(acrescimo_42, 2)


print(resutado_1)
print(resutado_2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:50:42)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2f))

resultado_2 = n+ (n * (42/100))
print(round(resultado_2, 2f))

resultado_3 = n - (n * (27/100))
print(round(resultado_3, 2f))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print(round(resultado_1, 2f))
                             ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:10:19)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2))
resultado_2 = n + (n* (42/100))
print(round(resultado_2, 2))
resultado_3 = n -(n *(63/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:37:26)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roundd(porcentagem_27, 2)
acrescimo_42 = n * (142/100)
resutado_2 = round(acrescimo_42, 2)


print(resutado_1)
print(resutado_2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:38:37)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roundd(porcentagem_27, 2)
acrescimo_42 = n + (42/100)
resutado_2 = round(acrescimo_42, 2)


print(resutado_1)
print(resutado_2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roundd(porcentagem_27, 2)
                 ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:20:10)
-- CODE: 
n = float(input())
porcentagem_27 = n * 0.27
acrescimo_42 = n * 1.42
desconto_63 = n * 0.37

print(f"{porcentagem_27:.2}")
print(f"{acrescimo_42:.2}")
print(f"{desconto_63:.2}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
4.6e+01
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.2
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
1.2e+02
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1.3e+03
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2e+03
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:51:43)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2))

resultado_2 = n * (42/100))
print(round(resultado_2, 2))

resultado_3 = n * (27/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    resultado_2 = n * (42/100))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:10:18)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2))
resultado_2 = n + (n* (42/100))
print(round(resultado_2, 2))
resultado_3 = n -(n *(63/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:37:02)
-- CODE: 
n = float(input())
porcentagem_27 = n * (27/100)
resutado_1 = roud(porcentagem_27, 2)
acrescimo_42 = n * (142/100)
resutado_2 = round(acrescimo_42, 2)


print(resutado_1)
print(resutado_2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    resutado_1 = roud(porcentagem_27, 2)
                 ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:09:33)
-- CODE: 
n = float(input())
resultado_1 n = * (27/100)
print(round(resultado_1, 2))
resultado_2 = n + (n* (42/100))
print(round(resultado_2, 2))
resultado_3 = n -(n *(63/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    resultado_1 n = * (27/100)
                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 01:55:58)
-- CODE: 
n = float(input())
resultado_1 = n * (27/100)
print(round(resultado_1, 2))

resultado_2 = n +(n * (42/100))
print(round(resultado_2, 2))

resultado_3 = n -(n * (63/100))
print(round(resultado_3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
